<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.configs.fragments.AdicionalesConfigFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageView
            android:id="@+id/iv_save_adi"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="right"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </androidx.appcompat.widget.Toolbar>


    <ScrollView
        android:id="@+id/sv_Form_a_c"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name">

        <LinearLayout
            android:id="@+id/ll_ac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_foto_ac"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:contentDescription="TODO"
                android:src="@drawable/svg_pizza"
                android:visibility="invisible" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:hintTextColor="@color/color_primary_night">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/til_nombre_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_adicional_24"
                    android:hint="@string/name_adi_config"
                    android:inputType="textShortMessage" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:hintTextColor="@color/color_primary_night">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/til_precio_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_attach_money_24"
                    android:hint="@string/price_pizza_config"
                    android:inputType="text|phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:hintTextColor="@color/color_primary_night">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/til_desc_ac"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_baseline_edit_note_24"
                    android:hint="@string/description_pizza_config"
                    android:inputType="textShortMessage"
                    android:textColorHint="#616161" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_listaaAdi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

</LinearLayout>